<resources>
    <string name="app_name">Найти курьера</string>
    <string name="title_activity_delivery">DeliveryActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="registration">Регистрация</string>
    <string name="enter">Войти</string>
    <string name="pwd">Пароль</string>
    <string name="login">Логин</string>
    <string name="enter_client">Войти как клиент</string>
    <string name="enter_deliver">Войти как курьер</string>
    <string name="enter_manager">Войти как менеджер</string>
    <string name="search">Поиск</string>
    <string name="exit">Выход</string>
    <string name="delivered">Доставленные</string>
    <string name="my_orders">Текущие заказы</string>
    <string name="my_review">Мои отзывы</string>
    <string name="discount">Акции/скидки</string>
    <string name="auth">Авторизация</string>
    <string name="review">Отзыв</string>
    <string name="cancel">Отмена</string>
    <string name="send">Отправить</string>
    <string name="send_review">Оставить отзыв</string>
    <string name="title_activity_maps">Map</string>
    <string name="one_order">Один заказ</string>
    <string name="enter_name">Как обращаться*</string>
    <string name="enter_phone">Телефон*</string>
    <string name="all_correct">Все верно</string>
    <string name="enter_code">Ввести код из смс</string>
    <string name="get_confirm_code">Получить код подтверждения</string>
    <string name="try_count">Попыток осталось:</string>
    <string name="ask_again">Повтор</string>
    <string name="confirm">Подтвердить</string>
    <string name="order_search">Поиск заказа</string>
    <string name="enter_order_number">Введите номер заказа</string>
    <string name="companies">Компании</string>
    <string name="companies_partners">Компании партнеры</string>
</resources>
