<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_not_delivered"
            android:icon="@drawable/ic_not_delivered"
            android:title="@string/my_orders" />
        <item
            android:id="@+id/nav_delivered"
            android:icon="@drawable/ic_delivered"
            android:title="@string/delivered" />

        <item
            android:id="@+id/nav_review"
            android:icon="@drawable/ic_review"
            android:title="@string/my_review" />

        <item
            android:id="@+id/nav_discount"
            android:icon="@drawable/ic_discount"
            android:title="@string/discount" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_user_exit"
            android:title="@string/exit" />
    </group>
</menu>
