<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">
        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pwd"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:id="@+id/btn_register"
        style="@style/DeliveryButton"
        android:layout_margin="4dp"
        android:text="@string/registration"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/btn_enter"
        style="@style/DeliveryButton"
        android:layout_margin="4dp"
        android:text="@string/enter"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        />

    </LinearLayout>
</LinearLayout>