<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <EditText
            android:id="@+id/etEnterOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_order_number"
            android:maxLines="1"
            android:inputType="text"
            android:minWidth="250dp"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tvOrderTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="15sp"
        android:gravity="center"
        tools:text="Ваш заказ готовится"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvOrderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        tools:text="Чтобы точно отслеживать заказ на карте зарегистрируйтесь в приложении" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="@style/DeliveryButton"
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            style="@style/DeliveryButton"
            android:id="@+id/btnSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/search" />

    </LinearLayout>

</LinearLayout>